<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evercam Connect</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera_details">Camera Details</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_router">Network Info</string>
    <string name="action_sample">Sample Cameras</string>
    <string name="action_version">About</string>
    <string name="action_showcameraonly">Show Cameras Only</string>
    <string name="action_showall">Show All Devices</string>
    <string name="action_edit">Edit Details</string>
    <string name="action_signIn">Sign In</string>
    <string name="action_signOut">Sign Out</string>
    <string name="demoCamera">Demo Camera</string>
    <string name="sampleCamera">Sample Camera in Dublin</string>
    <string name="scanning">Scanning…</string>
    <string name="sampleHikvisionModel">Hikvision DS-2CD7164-E</string>
    <string name="title_activity_router">Network</string>
    <string name="router_title">Router Information:</string>
    <string name="device_title">Device Information:</string>
    <string name="router_ip">IP Address:</string>
    <string name="external_ip">External IP:</string>
    <string name="router_mac">MAC Address:</string>
    <string name="device_ip">Your IP Address:</string>
    <string name="device_mac">Your MAC Address:</string>
    <string name="router_netmask">Net Mask:</string>
    <string name="routerUPNP">UPnP Status:</string>
    <string name="router_web">Router Webpage</string>
    <string name="title_activity_sample">Demo Camera</string>
    <string name="title_activity_sample_camera_details">Demo Camera Details</string>
    <string name="sample_detail_name">Demo Camera Name:</string>
    <string name="no_camera">No camera found.</string>
    <string name="title_activity_port_scan">Port Scan</string>
    <string name="title_activity_camera_detail">Camera Details</string>
    <string name="mac">MAC Address:</string>
    <string name="ip">IP Address:</string>
    <string name="vendor">Vendor:</string>
    <string name="model">Model:</string>
    <string name="http">HTTP Port:</string>
    <string name="rtsp">RTSP Port:</string>
    <string name="https">HTTPS Port:</string>
    <string name="ftp">FTP Port:</string>
    <string name="ssh">SSH Port:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="first_seen">First Seen:</string>
    <string name="last_seen">Last Active:</string>
    <string name="title_activity_popup">PopupActivity</string>
    <string name="no_wifi">Please check your Wi-Fi connection!</string>
    <string name="title_activity_edit">Edit Camera Details</string>
    <string name="internal">Internal Ports</string>
    <string name="external">External Ports</string>
    <string name="internalhttp">Internal HTTP:</string>
    <string name="externalhttp">External HTTP:</string>
    <string name="internalrtsp">Internal RTSP:</string>
    <string name="externalrtsp">External RTSP:</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="forwarded">Forwarded?</string>
    <string name="iscamera">Is Camera?</string>
    <string name="reportwarning">Would you like to report this? If yes, please specify device model. Thanks.</string>
    <string name="confirmIsCamera">Are you sure this is a camera?</string>
    <string name="confirmNotCamera">Are you sure it is NOT a camera?</string>
    <string name="confirmFeedBack">Would you like to send discovered results to help improve Evercam Connect?</string>
    <string name="confirmStopScan">Scanning is in process, are you sure you want to cancel?</string>
    <string name="emailtitle">EvercamConnect User Data</string>
    <string name="email_support">support@evercam.io</string>
    <string name="axisVideoService">_axis-video._tcp.local.</string>
    <string name="alertNoCamera">No camera found. If any camera is not recognized correctly, please in Device detail page -> Edit to set as a camera and send us a feedback. </string>
    <string name="portForwarding">Port Forwarding</string>
    <string name="searchingRouter">Searching for UPnP router......</string>
    <string name="routerAvaliable">UPnP port forwarding is available.</string>
    <string name="routerNotAvaliable">UPnP is not available.</string>
    <string name="helpNoInternalPort">Please try to add internal ports information manually and try again later. </string>
    <string name="helpNotAvailiable">Please make sure UPnP on your router is enabled. </string>
    <string name="action_setAsCamera">Set As Camera</string>
    <string name="action_setAsDevice">Set As Device</string>
    <string name="action_forward">Port Forward</string>
    <string name="msg_isForwarded">This camera has been successfully forwarded.</string>
    <string name="useUPNP">USE UPnP TO FORWARD THIS CAMERA</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="extHTTPPort">External HTTP Port:</string>
    <string name="extRTSPPort">External RTSP Port:</string>
    <string name="description">Description:</string>
    <string name="description1">Description</string>
    <string name="forward">Forward</string>
    <string name="addPort">Add Port</string>
    <string name="removePort">Remove Port</string>
    <string name="loadingMsg">Loading Forwarded Ports......</string>
    <string name="pleaseWait">Please wait.......</string>
    <string name="noInternalPort">No Internal Ports Detected!</string>
    <string name="forwardedBracket">(Forwarded)</string>
    <string name="readyBracket">(Ready)</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="manualForwardSuccessMsg">Port Successfully Forwarded!\n\nLoading Mapped Ports......</string>
    <string name="manualDeleteSuccessMsg">Port Successfully Deleted!\n\nLoading Mapped Ports......</string>
    <string name="portForwardFailed">Port Forwarding Failed!</string>
    <string name="deleteForwardFailed">Failed To Delete Port!</string>
    <string name="portRangeMsg">Port must be number between 1 and 65535!</string>
    <string name="portRangeMsg1">Port Range must between 0 and 65535!</string>
    <string name="fillInAllMsg">Please fill in ALL details first!</string>
    <string name="addPortForward">Add Port Forwarding</string>
    <string name="removePortForward">Remove Port Forwarding</string>
    <string name="isBonjour">Is Bonjour?</string>
    <string name="isUpnp">Is UPnP?</string>
    <string name="isOnvif">Is OnVif?</string>
    <string name="pleaseConnectNetwork">Please connect to ANY network first.</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="confirmSignOutMsg">Are you sure you want to sign out?</string>
    <string name="unknown">Unknown</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notAvaliable">Not available</string>
    <string name="next">Next</string>
    <string name="dialogMsgMustConnect">You must connect to the internet before scanning.</string>
    <string name="wifiSettings">Wi-Fi settings</string>
    <string name="notNow">Not now</string>
    <string name="notConnected">Not connected to a network</string>
    <string name="signUpForEvercam">Sign Up for Evercam</string>
    <string name="networkInterface">Network Interface: </string>
    <string name="noNetworkInterface">No network interface found.</string>
    <string name="msgMustConnect">No network interface found.</string>
    <string name="titleManualForward">Manual Forwarding</string>
    <string name="titleUpnpForward">UPnP Forwarding</string>
    <string name="forwardGuideMsg">1. If UPnP is enabled on your router, \'UPnP Forwarding\' helps forward your camera without log into the router.\n\n2. If you\'ve forworded the camera in your router, \'Manual Forwarding\' helps fill up forwarded ports and make it easier to add to Evercam.</string>
    <string name="userGuide">User Guide</string>
    <string name="userGuideMsg">Send a feedback to let us know this is a camera or not.</string>
    <string name="checkInternetConnection">Please check your INTERNET connection.</string>
    <string name="signOutAlert">Would you like to sign out?</string>
    <string name="login_progress_signing_in">Signing in</string>
    <string name="addToEvercam">Add to Evercam</string>
    <string name="isEvercam">Is Evercam? </string>
    <string name="viewWebsite">View Website</string>
    <string name="viewRtspStream">View RTSP Stream</string>
    <string name="editDetails">Edit Details</string>
    <string name="thisisNotcamera">This is NOT a camera</string>
    <string name="thisiscamera">This is a CAMERA</string>
    <string name="cameraIp">Camera IP:</string>
    <string name="internalPort:">Internal Port:</string>
    <string name="externalPort:">External Port:</string>
    <string name="internalPort">Internal Port</string>
    <string name="externalPort">External Port</string>
    <string name="protocol:">Protocol:</string>
    <string name="tcp">TCP</string>
    <string name="udp">UDP</string>
    <string name="description:">Description:</string>
    <string name="description">Description</string>
    <string name="portType:">Port Type:</string>
    <string name="noInternalPortExists">No internal port exists.</string>
    <string name="internalCapital">INTERNAL</string>
    <string name="externalCapital">EXTERNAL</string>
    <string name="addPort">Add Port</string>
    <string name="save">Save</string>
    <string name="title_activity_add_to_evercam">Complete Camera Details</string>
    <string name="cameraId:">Camera ID:</string>
    <string name="cameraName:">Name:</string>
    <string name="snapshotJpgPath:">Snapshot Path:</string>
    <string name="isPublic">Is Public?</string>
    <string name="Public">Public</string>
    <string name="Private">Private</string>
    <string name="optional:">Optional:</string>
    <string name="myCamera">My Camera</string>

</resources>