<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="5sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/editModel_txt"
            android:layout_width="89sp"
            android:layout_height="20sp"
            android:text="@string/model"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editModel_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unknown"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#778899"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/editHttp_txt"
            android:layout_width="89sp"
            android:layout_height="20sp"
            android:text="@string/http"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editHttp_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unknown"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#778899"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/editRtsp_txt"
            android:layout_width="89sp"
            android:layout_height="20sp"
            android:text="@string/rtsp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editRtsp_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unknown"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#778899"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/editHttps_txt"
            android:layout_width="89sp"
            android:layout_height="20sp"
            android:text="@string/https"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editHttps_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unknown"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#778899"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/editFtp_txt"
            android:layout_width="89sp"
            android:layout_height="20sp"
            android:text="@string/ftp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editFtp_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unknown"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#778899"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/editSsh_txt"
            android:layout_width="89sp"
            android:layout_height="20sp"
            android:text="@string/ssh"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editSsh_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unknown"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#778899"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/editUsername_txt"
            android:layout_width="89sp"
            android:layout_height="20sp"
            android:text="@string/username"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editUsername_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unknown"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#778899"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/editPassword_txt"
            android:layout_width="89sp"
            android:layout_height="20sp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editPassword_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unknown"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#778899"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>