<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/isAvailiable_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2sp"
                android:textColor="#778899"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/face_img"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_margin="5dip"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#778899" />

        <ProgressBar
            android:id="@+id/processBarUPNP"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:visibility="gone" />

        <TextView
            android:id="@+id/helpMsg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/use_upnp_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="5sp"
            android:checked="false"
            android:text="@string/useUPNP"
            android:textSize="14sp"
            android:visibility="invisible" >
        </CheckBox>

        <RadioGroup
            android:id="@+id/radioGroup_autoOrManu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <RadioButton
                android:id="@+id/radio_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/auto" >
            </RadioButton>

            <RadioButton
                android:id="@+id/radio_manually"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:text="@string/manual" >
            </RadioButton>
        </RadioGroup>

        <LinearLayout
            android:id="@+id/use_upnp_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/externalHTTP_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="15sp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/externalHTTP_txt"
                    android:layout_width="150sp"
                    android:layout_height="20sp"
                    android:text="@string/extHTTPPort"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/externalHTTP_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:textColor="#778899"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/externalHTTP_Label"
                    android:layout_width="wrap_content"
                    android:layout_height="20sp"
                    android:layout_marginLeft="5sp"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/externalRTSP_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="10sp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/externalRTSP_txt"
                    android:layout_width="150sp"
                    android:layout_height="20sp"
                    android:text="@string/extRTSPPort"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/externalRTSP_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:textColor="#778899"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/externalRTSP_Label"
                    android:layout_width="wrap_content"
                    android:layout_height="20sp"
                    android:layout_marginLeft="5sp"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/description_txt"
                    android:layout_width="120sp"
                    android:layout_height="20sp"
                    android:text="@string/description"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/discription_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/description1"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="#778899"
                    android:textSize="15sp"
                    android:visibility="gone" />
            </LinearLayout>

            <Button
                android:id="@+id/saveForwarding_button"
                android:layout_width="fill_parent"
                android:layout_height="35dip"
                android:layout_gravity="center"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="25dip"
                android:background="@drawable/btn_selector"
                android:text="@string/forward"
                android:textColor="#ffffff"
                android:visibility="gone" >
            </Button>

            <TextView
                android:id="@+id/buttomLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17sp"
                android:layout_marginTop="20sp"
                android:textColor="#778899"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/manual_upnp_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/nat_table_txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16sp"
                android:layout_marginTop="20sp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="fill_parent"
                android:layout_height="35dip"
                android:layout_gravity="center"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:layout_marginTop="20dip"
                android:background="@drawable/btn_selector"
                android:text="@string/addPort"
                android:textColor="#ffffff" >
            </Button>

            <Button
                android:id="@+id/remove_button"
                android:layout_width="fill_parent"
                android:layout_height="35dip"
                android:layout_gravity="center"
                android:layout_marginBottom="30dip"
                android:layout_marginLeft="16sp"
                android:layout_marginRight="16sp"
                android:layout_marginTop="20dip"
                android:background="@drawable/btn_selector"
                android:text="@string/removePort"
                android:textColor="#ffffff" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>