<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="5sp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/portType_txt"
            android:layout_width="85sp"
            android:layout_height="20sp"
            android:text="Port Type:"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/portType_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="5sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cameraip_txt"
            android:layout_width="90sp"
            android:layout_height="20sp"
            android:text="@string/cameraIp"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cameraip_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#778899"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/internal_txt"
            android:layout_width="85sp"
            android:layout_height="20sp"
            android:text="@string/internalPort:"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/internal_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/internalPort"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#778899"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/external_txt"
            android:layout_width="85sp"
            android:layout_height="20sp"
            android:text="@string/externalPort:"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/external_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/externalPort"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#778899"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/portProtocol_txt"
            android:layout_width="85sp"
            android:layout_height="20sp"
            android:layout_marginTop="6sp"
            android:text="@string/protocol"
            android:textColor="#000000"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/radioGroup_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="forwardProtocol"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_tcp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/tcp"
                android:textColor="#778899" >
            </RadioButton>

            <RadioButton
                android:id="@+id/radio_udp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/udp"
                android:textColor="#778899" >
            </RadioButton>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/portDescription_txt"
            android:layout_width="85sp"
            android:layout_height="20sp"
            android:text="@string/description:"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/portDiscription_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#778899"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>